Fixes horizontal scroll bar issue
Adds padding above 1800px

--- a/src/dd.css
+++ b/src/dd.css
@@ -11,7 +11,6 @@ header {
   --light-grey: #eeeeee;
   --ash: #f4f4f4;
   --primary-color: darkseagreen;
-  /* #2b72fb; */
   --white: white;
   --border: 1px solid var(--light-grey);
   --shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
@@ -78,7 +77,6 @@ button {
   align-items: center;
   justify-content: space-between;
   max-width: 1600px;
-  margin: 0 auto;
   column-gap: 2rem;
   height: 90px;
   padding: 1.2rem 3rem;
@@ -97,10 +95,6 @@ button {
 .menu-bar li:first-child ul:nth-child(1) {
   border-right: var(--border);
 }
-
-/* .menu-bar li:nth-child(n + 2) ul:nth-child(1) {
-  border-bottom: var(--border);
-} */
 
 .menu-bar .dropdown-link-title {
   font-weight: 600;
@@ -236,7 +230,6 @@ button {
     position: absolute;
     top: 87px;
     left: 0;
-    /* min-height: 100vh; */
     width: 100vw;
   }
 
