--- a/src/site.css
+++ b/src/site.css
@@ -9,6 +9,7 @@ body {
   font-weight: 300;
   font-style: normal;
   font-size: 16pt;
+  container-type: inline-size;
 }
 
 header {
@@ -34,7 +35,8 @@ article {
   display: flex;
   align-items: center;
   text-align: center;
-  width: 100dvw;
+  width: 100vw;
+  width: 100cqw;
   p {
     padding: 1rem 0 0;
   }
@@ -42,13 +44,15 @@ article {
     padding: 0 0 1rem;
   }
   img {
-    max-width: 40dvw;
+    max-width: 40vw;
+    max-width: 40cqw;
   }
 }
 
 main img {
   padding: 0;
-  min-width: 50dvw;
+  min-width: 50vw;
+  min-width: 50cqw;
 }
 
 .centred {
@@ -61,13 +65,15 @@ main img {
 .vertical {
   flex-direction: column;
   img {
-    max-width: 100dvw;
+    max-width: 100vw;
+    max-width: 100cqw;
   }
   padding-bottom: 0;
 }
 
 main > article > div {
-  min-width: 50dvw;
+  min-width: 50vw;
+  min-width: 50cqw;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -94,16 +100,15 @@ article.right {
   flex-direction: row-reverse;
 }
 
-/* article img {
-  max-width: 40dvw;
-} */
-
 @media (max-width: 1100px) {
   article {
     flex-wrap: wrap;
     padding: 0 0 2rem;
     img {
-      max-width: 100dvw;
+      max-width: 100vw;
+      max-width: 100cqw;
+      width: 100vw;
+      width: 100cqw;
     }
     p {
       padding: 1rem 1rem 0;
@@ -147,15 +152,23 @@ article.right {
     flex: 1 0 auto;
 
     & * {
-      min-width: 50dvw;
+      min-width: 50vw;
+      min-width: 50cqw;
     }
+  }
+}
+
+@media (min-width: 1800px) {
+  body {
+    padding: 0 calc((100vw - 1800px) / 2);
   }
 }
 
 footer > article {
   padding: 1rem 0rem;
   & > div {
-    min-width: 100dvw;
+    min-width: 100vw;
+    min-width: 100cqw;
   }
 }
 
